# around-the-world-in-80-spans

./: Dockerfile  Makefile  README.md  app.py  compose.yaml  filebeat.yaml  nginx.conf  otel-collector.yaml  prometheus.yaml
services/dotnet-station/: Dockerfile  Program.cs  dotnet-station.csproj
services/elixir-station/: Dockerfile  mix.exs
services/elixir-station/config/: config.exs
services/elixir-station/lib/: station.ex
services/entry/: Dockerfile  app.py  requirements.txt
services/go-grpc/: Dockerfile  go.mod  journey.proto  main.go
services/java-station/: Dockerfile  pom.xml
services/java-station/src/main/java/com/journey/: Application.java
services/java-station/src/main/resources/: application.properties
services/kafka-consumer/: Dockerfile  go.mod  main.go
services/mqtt-consumer/: consumer.py  requirements.txt
services/nats-consumer/: Dockerfile  index.js  package.json
services/node-station/: Dockerfile  index.js  package.json  tracing.js
services/php-station/: Dockerfile  composer.json  index.php
services/rabbit-consumer/: Dockerfile  consumer.py  requirements.txt
services/ruby-station/: Dockerfile  Gemfile  app.rb
services/rust-station/: Cargo.toml  Dockerfile
services/rust-station/src/: main.rs
