[package]
name = "rust-station"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.15"
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
